# cascade_client

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  draft  handy_stuff.lua  handy_stuff.txt  main.cpp  uml.mdj
application/: CMakeLists.txt  application.cpp  application.hpp  application.qrc
application/clock/: CMakeLists.txt  clock.cpp  clock.hpp
application/console/: CMakeLists.txt  console.hpp
application/debug_console/: CMakeLists.txt  debug_console.cpp  debug_console.hpp
application/main_window/: CMakeLists.txt  main_window.cpp  main_window.hpp  main_window.qrc
application/main_window/alerts_page/: CMakeLists.txt  alerts_page.cpp  alerts_page.hpp  alerts_page.qrc
application/main_window/alerts_page/alert/: CMakeLists.txt  alert.cpp  alert.hpp
application/main_window/charts_page/: CMakeLists.txt  charts_page.cpp  charts_page.hpp  charts_page.qrc
application/main_window/charts_page/chart/: CMakeLists.txt  chart.hpp
application/main_window/connections_page/: CMakeLists.txt  connections_page.cpp  connections_page.hpp  connections_page.qrc
application/main_window/connections_page/connections/: CMakeLists.txt
application/main_window/connections_page/connections/com_connection/: CMakeLists.txt  com_connection.cpp  com_connection.hpp
application/main_window/connections_page/connections/connection/: CMakeLists.txt  connection.hpp
application/main_window/connections_page/connections/tcp_connection/: CMakeLists.txt  tcp_connection.cpp  tcp_connection.hpp
application/main_window/connections_page/connections/usb_connection/: CMakeLists.txt  usb_connection.cpp  usb_connection.hpp
application/main_window/logbook_page/: CMakeLists.txt  logbook_page.cpp  logbook_page.hpp
application/main_window/logbook_page/log/: CMakeLists.txt  log.cpp  log.hpp
application/main_window/page/: CMakeLists.txt  page.cpp  page.hpp
application/main_window/pages/: CMakeLists.txt
application/main_window/pages/alerts_page/: CMakeLists.txt  alerts_page.cpp  alerts_page.hpp  alerts_page.qrc
application/main_window/pages/alerts_page/alert/: alert.cpp  alert.hpp
application/main_window/pages/charts_page/: charts_page.cpp  charts_page.hpp
application/main_window/pages/connections_page/: connections_page.cpp  connections_page.hpp
application/main_window/pages/connections_page/connections/com_connection/: com_connection.hpp
application/main_window/pages/connections_page/connections/connection/: CMakeLists.txt
application/main_window/pages/connections_page/connections/tcp_connection/: CMakeLists.txt  tcp_connection.cpp
application/main_window/pages/logbook_page/: CMakeLists.txt  logbook_page.cpp  logbook_page.hpp  logbook_page.qrc
application/main_window/pages/logbook_page/log/: CMakeLists.txt  log.cpp
application/main_window/pages/page/: CMakeLists.txt  page.cpp  page.hpp
application/main_window/pages/scenarios_page/: CMakeLists.txt  scenarios_page.cpp
application/main_window/pages/sensors_page/: sensors_page.cpp  sensors_page.qrc
application/main_window/pages/sensors_page/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp  sensor.qrc
application/main_window/pages/sensors_page/sensor/scripts/: sensor.lua
application/main_window/pages/sensors_page/sensors_creator/: CMakeLists.txt  sensors_creator.cpp  sensors_creator.hpp  sensors_creator.qrc
application/main_window/pages/sensors_page/sensors_creator/scripts/: sensors_templates_json.lua
application/main_window/pages/settings_page/: CMakeLists.txt
application/main_window/scenarios_page/: CMakeLists.txt  scenarios_page.cpp  scenarios_page.hpp  scenarios_page.qrc  scn_icons.qrc
application/main_window/scenarios_page/scenario/: CMakeLists.txt  scenario.hpp
application/main_window/sensors_page/: CMakeLists.txt  sensors_page.cpp  sensors_page.hpp  sensors_page.qrc
application/main_window/sensors_page/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp
application/main_window/sensors_page/sensors_creator/: CMakeLists.txt  sensors_creator.cpp  sensors_creator.hpp  sensors_creator.qrc  sensors_templates.json
application/main_window/sensors_page/sensors_creator/scripts/: draft.lua  sensors_templates_json.lua
application/main_window/sensors_page/sensors_creator/sensor_widget/: CMakeLists.txt  sensor_widget.cpp  sensor_widget.hpp  sw_icons.qrc
application/main_window/settings_page/: CMakeLists.txt  settings_page.cpp  settings_page.hpp
application/main_window/ui_toolkit/: CMakeLists.txt  ui_toolkit.cpp  ui_toolkit.hpp  ui_toolkit.qrc
application/main_window/ui_toolkit/scripts/: qabstractbutton_extra.lua
application/script_engine/: CMakeLists.txt
application/script_engine/script_entity/: CMakeLists.txt
application/scripts/: aux_functions.lua
application/time/: CMakeLists.txt
application/time/clock/: CMakeLists.txt  clock.cpp  clock.hpp
application/time/duration/: CMakeLists.txt  duration.hpp
application/time/timepoint/: CMakeLists.txt  timepoint.cpp  timepoint.hpp
common_libraries/: CMakeLists.txt
libraries/: CMakeLists.txt
main_window/: CMakeLists.txt  icons.qrc  main_window.cpp  main_window.hpp  main_window.ui  mw_icons.qrc  square_list_widget.hpp  square_push_button.hpp
main_window/alerts_page/: CMakeLists.txt  alerts_page.cpp  alerts_page.hpp  ap_icons.qrc
main_window/charts_page/: CMakeLists.txt  ch_icons.qrc  charts_page.cpp  charts_page.hpp
main_window/connections_page/: CMakeLists.txt  cn_icons.qrc  connections_page.cpp  connections_page.hpp
main_window/logbook_page/: CMakeLists.txt  logbook_page.cpp  logbook_page.hpp  lp_icons.qrc
main_window/scenarios_page/: CMakeLists.txt  scenarios_page.cpp  scenarios_page.hpp  scn_icons.qrc
main_window/sensors_page/: CMakeLists.txt  sensors_page.cpp  sensors_page.hpp  sp_icons.qrc
main_window/sensors_page/sensors_creator/: CMakeLists.txt  sc_icons.qrc  sensors_creator.cpp  sensors_creator.hpp
main_window/sensors_page/sensors_creator/sensor_widget/: CMakeLists.txt  sensor_widget.cpp  sensor_widget.hpp
script_area/: CMakeLists.txt
script_engine/: CMakeLists.txt  script_engine.cpp  script_engine.hpp
