cmake_minimum_required(VERSION 3.31.5)
project(time)

####################### insert subdirectories here ##############################
add_subdirectory(clock)
add_subdirectory(timepoint)
add_subdirectory(duration)
#################################################################################




