cmake_minimum_required(VERSION 3.25.1)
project(time)

####################### insert subdirectories here ##############################
add_subdirectory(clock)
add_subdirectory(timepoint)
add_subdirectory(duration)
#################################################################################




