cmake_minimum_required(VERSION 3.25.1)
project(pages)

####################### insert subdirectories here ##############################
add_subdirectory(page)
add_subdirectory(alerts_page)
add_subdirectory(charts_page)
add_subdirectory(connections_page)
add_subdirectory(logbook_page)
add_subdirectory(scenarios_page)
add_subdirectory(sensors_page)
add_subdirectory(settings_page)
#################################################################################




