cmake_minimum_required(VERSION 3.31.5)
project(connections)

####################### insert subdirectories here ##############################
add_subdirectory(connection)
add_subdirectory(tcp_connection)
add_subdirectory(com_connection)
add_subdirectory(usb_connection)
#################################################################################




